browser/themes/shared/customizableui/panelUI-shared.css
/* ... */
#report-broken-site-panel-container {
  padding: var(--space-small) var(--space-xlarge) var(--space-xlarge);
}

#report-broken-site-popup-detailsView > .panel-subview-body {
  padding: var(--space-small) var(--space-xlarge) 0 var(--space-xlarge);
}

#report-broken-site-popup-previewView > .panel-footer {
  padding-block-start: var(--space-small);
}

/* ----- Profiles panels ----- */

#profiles-header-content {
  max-width: 16em;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

#profiles-edit-this-profile-button {
  list-style-image: url("chrome://global/skin/icons/edit-outline.svg");
  padding: var(--panel-header-back-icon-padding);
  margin: 0;
}

#profiles-edit-this-profile-button > .toolbarbutton-text {
  display: none;
}

#profiles-copy-profile-button {
  list-style-image: url("chrome://global/skin/icons/edit-copy.svg");
}

#profiles-create-profile-button {
  list-style-image: url("chrome://global/skin/icons/plus.svg");
}

#profile-icon-image {
  width: 90px;
  height: 90px;
  -moz-context-properties: fill, stroke;
  fill: var(--appmenu-profiles-theme-bg);
  stroke: var(--appmenu-profiles-theme-fg);
  border: 4px solid var(--panel-background-color);
  border-radius: var(--border-radius-circle);
}

#current-profile {
  align-items: center;
  gap: var(--space-small);
  position: relative;
}

#half-height-profile {
  background: var(--appmenu-profiles-theme-bg);
  width: 100%;
  height: 50%;
  z-index: -1;
  position: absolute;
  top: 0;
  border-block-end: 1px solid var(--card-border-color);
}

#PanelUI-profiles > .panel-subview-body {
  padding-block-start: 0;
}

/* ----- Profiles FxA panel ----- */

/* Special case: hide the profiles menuitem if the FxA/Sync panel is shown as
 * a submenu of the app menu, rather than anchored to the FxA/Sync toolbar
 * button. */
#appMenu-popup panelmultiview[mainViewId="appMenu-mainView"] #PanelUI-fxa-menu-profiles-button {
  display: none;
}

/* ----- Content Analysis indicator panel ----- */

#content-analysis-panel-container {
  padding: 8px;
}

/* ----- IP Protection panel ----- */
#PanelUI-ipprotection {
  padding: var(--space-small);
  width: 28em;

  @media not -moz-pref("browser.nova.enabled") {
    width: 400px;
  }

  > .panel-header {
    margin: 0;
  }

  > .panel-subview-body {
    padding: 0;
  }

  > toolbarseparator {
    display: none;
  }
}

@media not -moz-pref("browser.nova.enabled") {
  #ipprotection-header-content {
    color: var(--text-color);
  }
}

#ipprotection-experiment-badge {
  margin-inline-start: var(--space-xsmall);
  display: inline-block;
  color: var(--text-color-deemphasized);
}

#PanelUI-ipprotection-locations {
  max-height: 400px;
}

