Bug 2044522 - Increase VPN panel max-height so the location selector upgrade promo is visible with 5 locations - r=kpatenio,ip-protection-reviewers,desktop-theme-reviewers,emilio
Differential Revision: https://phabricator.services.mozilla.com/D306292

UltraBlame original commit: 26524a9c8081a4b6beb89d85b9bd7d3d18993a25

--- a/browser/themes/shared/customizableui/panelUI-shared.css
+++ b/browser/themes/shared/customizableui/panelUI-shared.css
@@ -2569,5 +2569,5 @@ radiogroup:focus-visible > .subviewradio[focused="true"] {
 }
 
 #PanelUI-ipprotection-locations {
-  max-height: 400px;
+  max-height: 43rem;
 }
